--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -3,5 +3,6 @@ body {
   padding: 0;
   font-family: sans-serif;
   background-image: url("/muster-background-opacity.png");
-  background-size: 50%;
+  /* background-size: 50%; */
+  background-size: 400px;
 }
